Minor fixes
- Fixed tests to be independed of the order of execution
- Changed collection from toList to Collectors.toList